fix thumbnail hover jump

--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -107,6 +107,7 @@ svg {
   display: block;
   max-width: 100%;
   transition: 0.1s ease;
+  width: 100%;
 }
 
 
